--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -25,7 +25,7 @@
 
 .banner a:hover {
     transform: scale(1.2);
-    background-color: rgba(85, 83, 83, 0.404);
+    background-color: #101316;
     border-radius: 15px;
     padding: 10px;
 }
