--- a/src/pages/about.css
+++ b/src/pages/about.css
@@ -1,9 +1,11 @@
 * {
     margin: 0px;
     padding: 0px;
-    font-family: sans-serif;
+    font-family: cursive;
     box-sizing: border-box;
 }
+
+@import url('https://fonts.googleapis.com/css?family=Oswald&display=swap'); 
 
 .about-me {
     color: #fff;
