--- a/src/pages/allproject.css
+++ b/src/pages/allproject.css
@@ -1,6 +1,8 @@
 *{
     margin: 0px;
     padding: 0px;
-    font-family: sans-serif;
+    font-family: cursive;
     box-sizing: border-box;
 }
+
+@import url('https://fonts.googleapis.com/css?family=Oswald&display=swap'); 
