--- a/src/pages/contact.css
+++ b/src/pages/contact.css
@@ -1,10 +1,12 @@
 * {
     margin: 0px;
     padding: 0px;
-    font-family: sans-serif;
+    font-family: cursive;
     box-sizing: border-box;
 
 }
+
+@import url('https://fonts.googleapis.com/css?family=Oswald&display=swap'); 
 
 .icons_images img {
     width: 70px;
@@ -91,3 +93,4 @@
     color: white;
     box-shadow: white;
 }
+
