--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -1,9 +1,11 @@
 * {
     margin: 0px;
     padding: 0px;
-    font-family: Arial;
+    font-family: cursive;
     box-sizing: border-box;
 }
+
+@import url('https://fonts.googleapis.com/css?family=Oswald&display=swap'); 
 
 .banner {
     display: grid;
