--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,31 +1,41 @@
-*{
+* {
     margin: 0px;
     padding: 0px;
-    font-family:sans-serif;
+    font-family: sans-serif;
     box-sizing: border-box;
 }
 
-.navbar_parent{
+.navbar_parent {
     width: 100%;
     height: 100px;
     font-family: Arial;
 }
 
-.divider_line{
+.divider_line {
     width: 100%;
     height: 100px;
     background-color: #fff;
 }
 
-.navbar_parent img{
+.navbar_parent img {
     width: 20px;
     height: auto;
 }
 
-.navbar_parent a{
+.navbar_parent a {
     text-decoration: none;
     color: #fff;
 }
+
+/* .fontLine {
+    width: 2px;
+    height: 30vh;
+    background-color: red;
+} */
+
+
+
+
 
 @media (max-width: 990px) {
     .navbar_parent {
