--- a/src/pages/allproject.css
+++ b/src/pages/allproject.css
@@ -4,3 +4,26 @@
     font-family:sans-serif;
     box-sizing: border-box;
 }
+
+.allpro {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 20px;
+
+}
+
+.allpro img {
+    width: 100%;
+    height: 50%;
+}
+
+.allpro h6 {
+    margin-top: 10px;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.card {
+    width: 100%;
+    height: 60vh;
+}
