--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #101010;
+  /* or your preferred dark shade */
+  margin: 0;
+  padding: 0;
+  font-family: 'sans-serif';
+  color: #fff;
 }
 
 code {
